# SnapPin

./: .gitignore  CMakeLists.txt  README.md
cmake/: SyncFfmpegRuntime.cmake
src/: SnapPin.rc  common.h  main.cpp
src/app/: AppController.cpp  AppController.h  AppIds.h  HotkeyService.cpp  HotkeyService.h  HotkeyWrapper.h  TrayService.cpp  TrayService.h
src/common/: KnownFolderUtil.h  ScopedHandle.h  WindowMessagePayload.h
src/core/: Annotation.h  AnnotationRenderer.cpp  AnnotationRenderer.h  CaptureService.cpp  CaptureService.h  ClipboardService.cpp  ClipboardService.h  CrashHandler.cpp  CrashHandler.h  Exporter.cpp  Exporter.h  FfmpegExporter.cpp  FfmpegExporter.h  HistoryService.cpp  HistoryService.h  Image.cpp  Image.h  ImageCodecUtil.cpp  ImageCodecUtil.h  Logger.cpp  Logger.h  MediaFoundationUtil.cpp  MediaFoundationUtil.h  OcrService.cpp  OcrService.h  ScreenCaptureUtil.cpp  ScreenCaptureUtil.h  ScreenRecorder.cpp  ScreenRecorder.h  Settings.cpp  Settings.h
src/ui/: FontManager.cpp  FontManager.h  GdiBitmapBuffer.cpp  GdiBitmapBuffer.h  GdiObject.h  GdiResourceCache.cpp  GdiResourceCache.h  HistoryWindow.cpp  HistoryWindow.h  OcrResultPopupWindow.cpp  OcrResultPopupWindow.h  OverlayWindow.cpp  OverlayWindow.h  PinWindow.cpp  PinWindow.h  PreviewBarWindow.cpp  PreviewBarWindow.h  SettingsWindow.cpp  SettingsWindow.h  ThemeColors.h  ToolbarWindow.cpp  ToolbarWindow.h  UiUtil.cpp  UiUtil.h  VideoPreviewPlayer.cpp  VideoPreviewPlayer.h  WindowProc.h  WindowUtil.cpp  WindowUtil.h
src/ui/widgets/: CheckBox.cpp  CheckBox.h  TextEdit.cpp  TextEdit.h
tools/ffmpeg/: build_minimal_msvc.ps1  configure_minimal_msvc.sh
